messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app-blue
spec:
  replicas: 1  # Set the number of replicas (pods) you need
  selector:
    matchLabels:
      app: django-messaging-app
  template:
    metadata:
      labels:
        app: django-messaging-app
        version: blue
    spec:
      containers:
      - name: web
        image: messaging_app-web:latest # Replace with your actual image
        ports:
        - containerPort: 8000
