messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging-app
      version: green
  template:
    metadata:
      labels:
        app: django-messaging-app
        version: green
    spec:
      containers:
      - name: web
        image: gcr.io/k8s-minikube/kicbase:green-version  # Use your green version image
        ports:
        - containerPort: 8000
